--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R6RLJ13BS1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R6RLJ13BS1');
+</script>
+
+
+  
   <meta charset="UTF-8">
-  <title>harpa cristã em áudio</title>
+  <title>harpa cristã em áudio - github</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     .blogger-box {
