--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   gtag('config', 'G-R6RLJ13BS1');
 </script>
 
-
+<link href='https://ivaldof.github.io/ebd/manifest.json' rel='manifest'/>
+<meta content='#0a0a23' name='theme-color'/>
   
   <meta charset="UTF-8">
   <title>harpa cristã em áudio - github</title>
@@ -64,5 +65,7 @@
         <p>&copy;Harpa Cristã- Todos os direitos reservados.</p>
   </footer>
 </center><b>
+
+  <script src='https://ivaldof.github.io/ebd/script.js'/>
 </body>
 </html>
