--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   gtag('config', 'G-R6RLJ13BS1');
 </script>
 
-<link href='https://ivaldof.github.io/ebd/manifest.json' rel='manifest'/>
-<meta content='#0a0a23' name='theme-color'/>
+<link rel="manifest" href="https://ivaldof.github.io/ebd/manifest.json">
+<meta name="theme-color" content="#000000">
+
   
   <meta charset="UTF-8">
   <title>harpa cristã em áudio - github</title>
