--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-R6RLJ13BS1');
 </script>
 
-<link rel="manifest" href="https://ivaldof.github.io/ebd/manifest.json">
+<link rel="manifest" href="/ebd/manifest.json">
 <meta name="theme-color" content="#000000">
 
   
@@ -67,6 +67,6 @@
   </footer>
 </center><b>
 
-  <script src='https://ivaldof.github.io/ebd/script.js'/>
+  <script src='/ebd/script.js'/>
 </body>
 </html>
